# logger_bench

./: consts.py  main.py  pyproject.toml  temp_async_logger.py
.github/workflows/: bench.yml
logger/: async_handler.py  async_logger.py  log_level.py
